--- a/index-ar.html
+++ b/index-ar.html
@@ -73,8 +73,12 @@
                                 <li class="menu-item"><a href="contact-ar.html" class="text-ar1">تواصل معنا</a></li>
                                 <li class="menu-item menu-item-has-children lang1"><a href="#">اللغه</a>
                                     <ul class="sub-menu">
-                                        <li class="menu-item webbox"><img src="img/sa-flag.png" width="30" alt="" class="mrg16-ar"><a href="index-ar.html" class="mrg18">اللغه العربيه</a></li>
-                                        <li class="menu-item webbox"><img src="img/uk-flag.png" width="28" alt="" class="mrg17-ar"><a href="index.html" class="mrg18">اللغه الإنجليزيه</a></li>
+                                        <li class="menu-item webbox"><img src="img/sa-flag.png" width="30" alt=""
+                                                class="mrg16-ar"><a href="index-ar.html" class="mrg18">اللغه العربيه</a>
+                                        </li>
+                                        <li class="menu-item webbox"><img src="img/uk-flag.png" width="28" alt=""
+                                                class="mrg17-ar"><a href="index.html" class="mrg18">اللغه الإنجليزيه</a>
+                                        </li>
                                     </ul>
                                 </li>
                             </ul>
@@ -175,7 +179,44 @@
                                             <div id="rev_slider_2_1" class="rev_slider fullwidthabanner height1"
                                                 style="display:none;" data-version="5.4.8">
                                                 <ul>
+                                                    <li data-index="rs-7" data-transition="fade"
+                                                        data-slotamount="default" data-hideafterloop="0"
+                                                        data-hideslideonmobile="off" data-easein="default"
+                                                        data-easeout="default" data-masterspeed="300"
+                                                        data-thumb="upload/slider-hp2-2-100x50.jpg" data-rotate="0"
+                                                        data-saveperformance="off" data-title="Slide" data-param1=""
+                                                        data-param2="" data-param3="" data-param4="" data-param5=""
+                                                        data-param6="" data-param7="" data-param8="" data-param9=""
+                                                        data-param10="" data-description=""> <img src="img/44.png"
+                                                            alt="" title="slider-hp2-2" width="1800" height="958"
+                                                            data-bgposition="center center" data-bgfit="cover"
+                                                            data-bgrepeat="no-repeat" class="rev-slidebg"
+                                                            data-no-retina>
 
+                                                        <div class="tp-caption tp-shape tp-shapewrapper  tp-resizeme mrg19"
+                                                            id="slide-6-layer-8" data-x="center" data-y="center"
+                                                            data-voffset="-10" data-width="['570']"
+                                                            data-height="['100']" data-type="shape"
+                                                            data-responsive_offset="on"
+                                                            data-frames='[{"delay":350,"speed":300,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
+                                                            data-textAlign="['inherit','inherit','inherit','inherit']"
+                                                            data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
+                                                            data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
+                                                            style="z-index: 6;background-color: #EB8223;"></div>
+
+                                                        <div class="tp-caption tp-resizeme mrg20"
+                                                            id="slide-6-layer-3" data-x="center" data-y="center"
+                                                            data-voffset="-15" data-width="['auto']"
+                                                            data-height="['auto']" data-type="text"
+                                                            data-responsive_offset="on"
+                                                            data-frames='[{"delay":690,"speed":300,"frame":"0","from":"x:-50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
+                                                            data-textAlign="['inherit','inherit','inherit','inherit']"
+                                                            data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
+                                                            data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
+                                                            style="z-index: 8; white-space: nowrap; font-size: 50px; line-height: 80px; font-weight: 300; color: #ffffff; letter-spacing: 0px; font-family: 'GE SS Two'; text-transform: uppercase;">
+                                                            صــمــم مـسـتـقـبـلـك
+                                                        </div>
+                                                    </li>
                                                     <li data-index="rs-6" data-transition="fade"
                                                         data-slotamount="default" data-hideafterloop="0"
                                                         data-hideslideonmobile="off" data-easein="default"
@@ -360,7 +401,8 @@
                                                                 التسويق وإدارة الأزياء</h3>
                                                             <div class="gdlr-core-column-service-caption gdlr-core-info-font gdlr-core-skin-caption"
                                                                 style="font-size: 15px ;font-weight: 200 ;font-style: normal ;">
-                                                                <a class="" href="fashion-management-design-ar.html">اقرأ
+                                                                <a class=""
+                                                                    href="fashion-management-design-ar.html">اقرأ
                                                                     المزيد</a>
                                                             </div>
                                                         </div>
@@ -394,7 +436,8 @@
                                                                 التصميم الداخلي</h3>
                                                             <div class="gdlr-core-column-service-caption gdlr-core-info-font gdlr-core-skin-caption"
                                                                 style="font-size: 15px ;font-weight: 200 ;font-style: normal ;">
-                                                                <a class="" href="interior-design-ar.html">اقرأ المزيد</a>
+                                                                <a class="" href="interior-design-ar.html">اقرأ
+                                                                    المزيد</a>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -427,7 +470,8 @@
                                                                 تصميم المجوهرات</h3>
                                                             <div class="gdlr-core-column-service-caption gdlr-core-info-font gdlr-core-skin-caption"
                                                                 style="font-size: 15px ;font-weight: 200 ;font-style: normal ;">
-                                                                <a class="" href="jewelery-design-ar.html">اقرأ المزيد</a>
+                                                                <a class="" href="jewelery-design-ar.html">اقرأ
+                                                                    المزيد</a>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -460,7 +504,8 @@
                                                                 تصميم الأزياء</h3>
                                                             <div class="gdlr-core-column-service-caption gdlr-core-info-font gdlr-core-skin-caption"
                                                                 style="font-size: 15px ;font-weight: 200 ;font-style: normal ;">
-                                                                <a class="" href="fashion-design-ar.html">اقرأ المزيد</a>
+                                                                <a class="" href="fashion-design-ar.html">اقرأ
+                                                                    المزيد</a>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -696,7 +741,7 @@
                                                             طـــرق استـخـــدام مكينــة الخيــاطة •<br>
                                                             أهمية المكوك في عملية الخيـاطة •<br>
                                                             الــتـعــرف عــلـى أهــمــيـــــة الــشــــــد •<br>
-                                                            التدريب على كيفية خياطة خطوط •<br> مستقيـمــة ومنحنـيــة 
+                                                            التدريب على كيفية خياطة خطوط •<br> مستقيـمــة ومنحنـيــة
                                                             وزوايــا حــادة&nbsp;
                                                             <br>
                                                             خياطة عينة لقبة مربعة وأخرى مستديــرة •<br>
@@ -747,8 +792,11 @@
                                                         </div>
                                                         <div class="gdlr-core-column-service-content"
                                                             style="font-size: 17px ;text-transform: none ;color: white;font-weight: 300;">
-                                                            <p class="p-width txtmob1 text-ar1 width1 text-ar1 ar-font ar-space">يُقدم معهد رافلز
-                                                                للطالبات فرصة الحصول على منـح دراسـيـــة في مختلف تخصصـــات
+                                                            <p
+                                                                class="p-width txtmob1 text-ar1 width1 text-ar1 ar-font ar-space">
+                                                                يُقدم معهد رافلز
+                                                                للطالبات فرصة الحصول على منـح دراسـيـــة في مختلف
+                                                                تخصصـــات
                                                                 التصميم المقدمة في المعهد</p> <a
                                                                 class="gdlr-core-column-service-read-more gdlr-core-info-font mrg14"
                                                                 href="scholarships.html"
@@ -780,9 +828,12 @@
                                                         </div>
                                                         <div class="gdlr-core-column-service-content"
                                                             style="font-size: 17px ;text-transform: none ;color: white;font-weight: 300;">
-                                                            <p class="p-width txtmob1 text-ar1 width1  text-ar1 ar-font ar-space">
-                                                                الريـــاض هـي عاصـمـــة المـمـلـكـــة العـربـيــــة السعـوديــة وأكبر مدنها،
-                                                                حيث يلتقـي سحــر العالم القديم برؤية القرن الحادي والعشرين
+                                                            <p
+                                                                class="p-width txtmob1 text-ar1 width1  text-ar1 ar-font ar-space">
+                                                                الريـــاض هـي عاصـمـــة المـمـلـكـــة العـربـيــــة
+                                                                السعـوديــة وأكبر مدنها،
+                                                                حيث يلتقـي سحــر العالم القديم برؤية القرن الحادي
+                                                                والعشرين
                                                             </p> <a
                                                                 class="gdlr-core-column-service-read-more gdlr-core-info-font mrg14"
                                                                 href="lifeinriyadh.html"
@@ -815,9 +866,12 @@
                                                         </div>
                                                         <div class="gdlr-core-column-service-content"
                                                             style="font-size: 17px ;text-transform: none ;color: white;font-weight: 300;">
-                                                            <p class="p-width txtmob1 text-ar1 width1  text-ar1 ar-font ar-space">يقع المقـر
+                                                            <p
+                                                                class="p-width txtmob1 text-ar1 width1  text-ar1 ar-font ar-space">
+                                                                يقع المقـر
                                                                 الأكـاديمـي
-                                                                الخـاص بمعـهـد رافلــز في تقاطع شارع العروبة وطريق الأمير
+                                                                الخـاص بمعـهـد رافلــز في تقاطع شارع العروبة وطريق
+                                                                الأمير
                                                                 تركي بن ​​عبد العزيــز الأول</p> <a
                                                                 class="gdlr-core-column-service-read-more gdlr-core-info-font mrg14"
                                                                 href="about-us.html"
@@ -935,9 +989,10 @@
                                 TO SEE HOW WE CAN HELP!
                             </h2>
                             <form id="contact" name="contact" action="" method="post">
-                                <input id="phone" type="number" name="phone" size="40" placeholder="Type your phone number"
-                                    aria-required="true" aria-invalid="false" required pattern="[+0-9\s]+">
-                                    
+                                <input id="phone" type="number" name="phone" size="40"
+                                    placeholder="Type your phone number" aria-required="true" aria-invalid="false"
+                                    required pattern="[+0-9\s]+">
+
                                 <input type="submit" id="submit" name="submit" value="SUBMIT">
                             </form>
                         </div>
@@ -1012,8 +1067,8 @@
                 <div class="kingster-copyright-wrapper">
                     <div class="kingster-copyright-container kingster-container clearfix">
                         <div class="kingster-copyright-left kingster-item-pdlr pad5">© 2023 Raffles Design Institue.
-                                    All
-                                    Rights Reserved</div>
+                            All
+                            Rights Reserved</div>
                         <div class="kingster-copyright-right kingster-item-pdlr">
                             <div class="gdlr-core-social-network-item gdlr-core-item-pdb  gdlr-core-none-align"
                                 style="padding-bottom: 0px ;">
