--- a/fashion-design-ar.html
+++ b/fashion-design-ar.html
@@ -252,12 +252,13 @@
                                                         <a>الإِبـــداع</a>
                                                     </h3>
                                                     <p class="font-css ar-float ar-font">
-                                                        • Fashion Design Principles<br>
-                                                        • Sketching & Illustration<br>
-                                                        • Technical Drawing<br>
-                                                        • Industrial Attachment<br>
-                                                        • Menswear Workshop<br>
-                                                        • Mini Collection Workshop
+                                                        • نظرية اللون ومبادئ تصميم للأزياء<br>
+                                                        • الألياف والمنسوجات<br>
+                                                        • اساسيات التسويق<br>
+                                                        • اساسيات الموضة 1<br>
+                                                        • صياغة النموذج 1<br>
+                                                        • اساسيات الخياطة 1<br>
+                                                        • رسم الأزياء<br>
                                                     </p>
                                                 </div>
                                             </div>
@@ -272,11 +273,20 @@
                                                         <a>الـرقـمـي</a>
                                                     </h3>
                                                     <p class="font-css ar-float ar-font">
-                                                        • CAD1 for Fashion Design<br>
-                                                        • CAD2 Digital Portfolio<br>
-                                                        • Developing Textiles<br>
-                                                        • Sewing Application<br>
-                                                        • Developing Fashion
+                                                        • تاريخ الأزياء 1
+                                                        <br>
+                                                        • تطوير المنسوجات
+                                                        <br>
+                                                        • مقدمة في إدارة العلامات التجارية
+                                                        <br>
+                                                        • اساسيات الموضة 2
+                                                        <br>
+                                                        • صياغة النموذج 2
+                                                        <br>
+                                                        • اساسيات الخياطة 2
+                                                        <br>
+                                                        • الرسم التقنى والرسم عن طريق الكمبيوتر
+                                                        <br>
                                                     </p>
                                                 </div>
                                             </div>
@@ -291,12 +301,14 @@
                                                         <a>الـتـصـمـيـم</a>
                                                     </h3>
                                                     <p class="font-css ar-float ar-font">
-                                                        • Design Research & Development<br>
-                                                        • Pattern Aided Design<br>
-                                                        • Fibers and Textiles<br>
-                                                        • Couture Techniques<br>
-                                                        • Pattern Drafting<br>
-                                                        • Fashion Draping
+                                                        • رسم الأزياء التوضيحي<br>
+                                                        • تاريخ الأزياء 2 <br>
+                                                        • الرسومات الفنية (تصنيف الملابس)<br>
+                                                        • التصميم بمساعدة النمط والدرجات والتكلفة<br>
+                                                        • تقنيات الخياطة المتقدمة<br>
+                                                        • اساسيات الموضة 3<br>
+                                                        • صياغة النموذج 3<br>
+                                                        • تطوير الموضة
                                                     </p>
                                                 </div>
                                             </div>
@@ -311,13 +323,14 @@
                                                         <a>الـنـظـريـة</a>
                                                     </h3>
                                                     <p class="font-css ar-font ar-float">
-                                                        • Academic Research & Communication Skills<br>
-                                                        • Brand Management Intro<br>
-                                                        • Marketing Foundation<br>
-                                                        • History of Costume<br>
-                                                        • Grading & Costing<br>
-                                                        • Garment Typology<br>
-                                                        • Color Theory
+                                                        • تقنيات تصميم الأزياء<br>
+                                                        • البحث الأكاديمي ومهارات الاتصال<br>
+                                                        • أنماط واتجاهات القرن العشرين<br>
+                                                        • بحث التصميم والتطوير 1<br>
+                                                        • ورشة عمل المشروع<br>
+                                                        • بحث وتطوير التصميم 2 <br>
+                                                        • المرفق الصناعي<br>
+                                                        • ورشة الملابس الرجالية
                                                     </p>
                                                 </div>
                                             </div>
@@ -332,8 +345,8 @@
                                             <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container-custom"
                                                 style="max-width: 1440px ;">
                                                 <div class="gdlr-core-pbf-element">
-                                                    <h3
-                                                        class="gdlr-core-title-item-title gdlr-core-skin-title h3mob h3-css ar-font" dir="rtl">
+                                                    <h3 class="gdlr-core-title-item-title gdlr-core-skin-title h3mob h3-css ar-font"
+                                                        dir="rtl">
                                                         الفرص الوظيفية المتاحة بعد الانتهاء من الدبلوم المتقدم<br> أو
                                                         البكالوريوس تصميم الأزياء:
 
@@ -344,32 +357,46 @@
                                     </div>
 
 
-                                    <div class="grid-container ar-font">
+                                    <div class="grid-container ar-float">
                                         <div class="grid-item">
-                                            <img src="img/Bullets-01.png" alt="Icon 1">
-                                            <p>Fashion Photography
-                                                Coordinator </p>
+                                            <img class="ar-mrg7" src="img/Bullets-01.png" alt="Icon 1">
+                                            <p class="ar-font">مصممة أزياء </p>
                                         </div>
                                         <div class="grid-item">
-                                            <img src="img/Bullets-01.png" alt="Icon 2">
-                                            <p class="mrg-top-grid">Costume Coordinator<br>
-                                                (for Television, Film or Theatre)</p>
+                                            <img class="ar-mrg7" src="img/Bullets-01.png" alt="Icon 2">
+                                            <p class="ar-font">مستشارة ازياء</p>
                                         </div>
                                         <div class="grid-item">
-                                            <img src="img/Bullets-01.png" alt="Icon 3">
-                                            <p>Fashion Consultant</p>
+                                            <img class="ar-mrg7" src="img/Bullets-01.png" alt="Icon 3">
+                                            <p class="ar-font">مساعدة مصممة</p>
                                         </div>
                                         <div class="grid-item">
-                                            <img src="img/Bullets-01.png" alt="Icon 4">
-                                            <p>Fashion Forecaster </p>
+                                            <img class="ar-mrg7" src="img/Bullets-01.png" alt="Icon 4">
+                                            <p class="ar-font">مسؤولة مشتريات</p>
                                         </div>
                                         <div class="grid-item">
-                                            <img src="img/Bullets-01.png" alt="Icon 5">
-                                            <p>Fashion Illustrator </p>
+                                            <img class="ar-mrg7" src="img/Bullets-01.png" alt="Icon 5">
+                                            <p class="ar-font  ar-mrg8">منسقة أزياء <br>(للتلفزيون أو السينما أو المسرح)</p>
                                         </div>
                                         <div class="grid-item">
-                                            <img src="img/Bullets-01.png" alt="Icon 6">
-                                            <p>Costume Designer</p>
+                                            <img class="ar-mrg7" src="img/Bullets-01.png" alt="Icon 6">
+                                            <p class="ar-font">خبيرة رسم الأزياء</p>
+                                        </div>
+                                        <div class="grid-item">
+                                            <img class="ar-mrg7" src="img/Bullets-01.png" alt="Icon 6">
+                                            <p class="ar-font">منسقة تصوير الأزياء</p>
+                                        </div>
+                                        <div class="grid-item">
+                                            <img class="ar-mrg7" src="img/Bullets-01.png" alt="Icon 6">
+                                            <p class="ar-font">مديرة مناسبات</p>
+                                        </div>
+                                        <div class="grid-item">
+                                            <img class="ar-mrg7" src="img/Bullets-01.png" alt="Icon 6">
+                                            <p class="ar-font">مجال تطوير الأزياء</p>
+                                        </div>
+                                        <div class="grid-item">
+                                            <img class="ar-mrg7" src="img/Bullets-01.png" alt="Icon 6">
+                                            <p class="ar-font">رائدة أعمال في مجال الأزياء</p>
                                         </div>
                                     </div>
 
